Blender 2.79 & 2.8 - Limit Dissolve does not have the right 'Max Angle' when the Delimit mode is Material mode #58571

Closed
opened 2018-12-03 02:03:45 +01:00 by Carlo Andreacchio · 7 comments

System Information
Operating system: Ubuntu 17.10
Graphics card: GTX 1080

Blender Version
Broken: 2.79, 2.80 @ 23284e4dde, and 2.83 @ ec116e3d49

Short description of error
Limit Dissolve does not have the right 'Max Angle' when the Delimit mode is both Normal and Material

Exact steps for others to reproduce the error

limitDissolveBug.blend

  1. Open attached blend file
  2. Press x -> l to limit dissolve
  3. In the tool options for limit dissolve, change it to Material Mode
  4. Notice how the circle's form is lost
  5. change the max angle to 0.015d
  6. Notice how the form is somewhat tehre now, but the angle is definetly not 0.015d

This is the same with the modifier (decimate / planar decimation), as well as blender 2.79 & 2.8

**System Information** Operating system: Ubuntu 17.10 Graphics card: GTX 1080 **Blender Version** Broken: 2.79, 2.80 @ 23284e4dde, and 2.83 @ ec116e3d49 **Short description of error** Limit Dissolve does not have the right 'Max Angle' when the Delimit mode is both Normal and Material **Exact steps for others to reproduce the error** [limitDissolveBug.blend](https://archive.blender.org/developer/F5804179/limitDissolveBug.blend) 1. Open attached blend file 2. Press x -> l to limit dissolve 3. In the tool options for limit dissolve, change it to Material Mode 4. Notice how the circle's form is lost 5. change the max angle to 0.015d 6. Notice how the form is somewhat tehre now, but the angle is definetly not 0.015d This is the same with the modifier (decimate / planar decimation), as well as blender 2.79 & 2.8

Added subscriber: @candreacchio

Added subscriber: @candreacchio

{F5804179}whops forgot to attach the file! Sorry!

{[F5804179](https://archive.blender.org/developer/F5804179/limitDissolveBug.blend)}whops forgot to attach the file! Sorry!
Campbell Barton was assigned by Sebastian Parborg 2018-12-07 19:45:28 +01:00
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:35:45 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Campbell Barton was assigned by Sybren A. Stüvel 2020-02-10 16:56:49 +01:00

I can reproduce this issue:

Before decimate:
image.png

After decimate:
image.png

I agree that the angles around the circle shape are much bigger than 0.015° after decimating. With an angle of 0.025° the circle is gone:

image.png

To illustrate, this is actually a single-arrow empty rotated 0.025° away from the Z-axis:

image.png

However, this could just be a misinterpretation of the "Max Angle". When you lift the green area up in the Z direction, everything starts working well. If the angle indicates curvature of the mesh (rather than angle between consecutive edges) the entire feature works just fine, and this is more a clarity/documentation issue than a bug in Blender.

image.png

I'll defer to @ideasman42 here, it looks like he implemented the feature.

I can reproduce this issue: Before decimate: ![image.png](https://archive.blender.org/developer/F8332672/image.png) After decimate: ![image.png](https://archive.blender.org/developer/F8332678/image.png) I agree that the angles around the circle shape are much bigger than 0.015° after decimating. With an angle of 0.025° the circle is gone: ![image.png](https://archive.blender.org/developer/F8332680/image.png) To illustrate, this is actually a single-arrow empty rotated 0.025° away from the Z-axis: ![image.png](https://archive.blender.org/developer/F8332684/image.png) However, this could just be a misinterpretation of the "Max Angle". When you lift the green area up in the Z direction, everything starts working well. If the angle indicates curvature of the mesh (rather than angle between consecutive edges) the entire feature works just fine, and this is more a clarity/documentation issue than a bug in Blender. ![image.png](https://archive.blender.org/developer/F8332697/image.png) I'll defer to @ideasman42 here, it looks like he implemented the feature.

This issue was referenced by d936f6977f

This issue was referenced by d936f6977fedaf5282c368bd32f545a76127770f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58571
No description provided.